[project]
name = "rarity"
version = "0.0.3"

description = "Rarity package for BallsDex"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "hiboman", email = "hiboman@proton.me" },
]
readme = "README.md"

# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/hiboman/BallsDex-Rarity-Pack"
Documentation = "https://github.com/hiboman/BallsDex-Rarity-Pack#readme"
Issues = "https://github.com/hiboman/BallsDex-Rarity-Pack/issues"
